add admin all appointments table (main)
